--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d2m-apigen",
   "private": false,
-  "version": "1.0.1",
+  "version": "1.0.4",
   "type": "module",
   "bin": {
     "d2m-apigen": "dist/index.js"
@@ -14,23 +14,22 @@
     "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.2",
-    "@rollup/plugin-commonjs": "^28.0.0",
+    "@biomejs/biome": "^1.9.4",
+    "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-typescript": "^12.1.0",
-    "@types/node": "^22.6.1",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "@types/node": "^22.9.0",
     "axios": "^1.7.7",
-    "fdir": "^6.3.0",
     "openapi3-ts": "^4.4.0",
-    "rollup": "^4.22.4",
-    "tslib": "^2.7.0",
-    "typescript": "^5.6.2"
+    "rollup": "^4.25.0",
+    "tslib": "^2.8.1",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "@orval/core": "^7.1.1",
-    "execa": "^9.4.0",
-    "orval-effect": "^7.1.1",
-    "picocolors": "^1.1.0"
+    "@orval/core": "^7.2.0",
+    "execa": "^9.5.1",
+    "orval-effect": "^7.2.0",
+    "picocolors": "^1.1.1"
   }
 }
