--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,26 @@
 {
-  "exclude": ["node_modules", "dist", "__tests__", "**/*.test*", "**/*.spec*", "**/api/*.*"],
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "esnext",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "inlineSources": false,
-    "isolatedModules": false,
-    "moduleResolution": "node",
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "preserveWatchOutput": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "resolveJsonModule": true
-  }
+	"exclude": [
+		"node_modules",
+		"dist",
+		"__tests__",
+		"**/*.test*",
+		"**/*.spec*",
+		"**/api/*.*"
+	],
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"compilerOptions": {
+		"target": "ESNext",
+		"module": "esnext",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"inlineSources": false,
+		"isolatedModules": false,
+		"moduleResolution": "node",
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"preserveWatchOutput": true,
+		"skipLibCheck": true,
+		"strict": true,
+		"resolveJsonModule": true
+	}
 }
