--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "d2m-apigen",
-  "private": false,
-  "version": "1.0.4",
-  "type": "module",
-  "bin": {
-    "d2m-apigen": "dist/index.js"
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
-    "prepublishOnly": "pnpm build"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@rollup/plugin-commonjs": "^28.0.1",
-    "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-typescript": "^12.1.1",
-    "@types/node": "^22.9.0",
-    "axios": "^1.7.7",
-    "openapi3-ts": "^4.4.0",
-    "rollup": "^4.25.0",
-    "tslib": "^2.8.1",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@clack/prompts": "^0.7.0",
-    "@orval/core": "^7.2.0",
-    "execa": "^9.5.1",
-    "orval-effect": "^7.2.0",
-    "picocolors": "^1.1.1"
-  }
+	"name": "d2m-apigen",
+	"private": false,
+	"version": "1.0.5",
+	"type": "module",
+	"bin": {
+		"d2m-apigen": "dist/index.js"
+	},
+	"files": ["dist"],
+	"scripts": {
+		"build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+		"format": "biome format --write . --use-editorconfig=true",
+		"prepublishOnly": "pnpm build"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@rollup/plugin-commonjs": "^28.0.1",
+		"@rollup/plugin-node-resolve": "^15.3.0",
+		"@rollup/plugin-typescript": "^12.1.1",
+		"@types/node": "^22.9.1",
+		"axios": "^1.7.7",
+		"openapi3-ts": "^4.4.0",
+		"rollup": "^4.27.3",
+		"tslib": "^2.8.1",
+		"typescript": "^5.6.3"
+	},
+	"dependencies": {
+		"@clack/prompts": "^0.8.1",
+		"@orval/core": "^7.3.0",
+		"execa": "^9.5.1",
+		"orval-effect": "^7.3.0",
+		"picocolors": "^1.1.1"
+	}
 }
