--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "d2m-apigen",
 	"private": false,
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"type": "module",
 	"bin": {
 		"d2m-apigen": "dist/index.js"
@@ -30,5 +30,8 @@
 		"execa": "^9.5.2",
 		"orval-effect": "^7.3.0",
 		"picocolors": "^1.1.1"
-	}
+	},
+  "resolutions": {
+    "whatwg-url": ">=14"
+  }
 }
