--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "d2m-apigen",
 	"private": false,
-	"version": "1.0.10",
+	"version": "1.1.0",
 	"type": "module",
 	"bin": {
 		"d2m-apigen": "dist/index.js"
@@ -17,18 +17,18 @@
 		"@rollup/plugin-commonjs": "^28.0.2",
 		"@rollup/plugin-node-resolve": "^16.0.0",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.10.5",
+		"@types/node": "^22.10.7",
 		"axios": "^1.7.9",
 		"openapi3-ts": "^4.4.0",
-		"rollup": "^4.30.1",
+		"rollup": "^4.31.0",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.2"
+		"typescript": "^5.7.3"
 	},
 	"dependencies": {
-		"@clack/prompts": "^0.9.0",
-		"@orval/core": "^7.4.0",
+		"@clack/prompts": "^0.9.1",
+		"@orval/core": "^7.4.1",
 		"execa": "^9.5.2",
-		"orval-effect": "^7.4.0",
+		"orval-effect": "7.4.1-patch1",
 		"p-limit": "^6.2.0",
 		"picocolors": "^1.1.1"
 	},
