--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "d2m-apigen",
 	"private": false,
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"type": "module",
 	"bin": {
 		"d2m-apigen": "dist/index.js"
@@ -18,21 +18,21 @@
 		"@rollup/plugin-commonjs": "^28.0.2",
 		"@rollup/plugin-node-resolve": "^16.0.0",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.10.8",
+		"@types/node": "^22.13.2",
 		"axios": "^1.7.9",
 		"openapi3-ts": "^4.4.0",
-		"rollup": "^4.31.0",
+		"rollup": "^4.34.6",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3"
 	},
 	"dependencies": {
-		"@clack/prompts": "^0.9.1",
-		"@orval/core": "^7.4.1",
+		"@clack/prompts": "^0.10.0",
+		"@orval/core": "^7.5.0",
 		"execa": "^9.5.2",
-		"orval-effect": "7.4.1-patch1",
+		"orval-effect": "7.5.0",
 		"p-limit": "^6.2.0",
 		"picocolors": "^1.1.1",
-		"vite": "^6.0.11"
+		"vite": "^6.1.0"
 	},
 	"resolutions": {
 		"whatwg-url": ">=14"
