--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "d2m-apigen",
 	"private": false,
-	"version": "1.1.3",
+	"version": "2.0.0",
 	"type": "module",
 	"bin": {
 		"d2m-apigen": "dist/index.js"
@@ -15,26 +15,30 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@rollup/plugin-commonjs": "^28.0.2",
-		"@rollup/plugin-node-resolve": "^16.0.0",
+		"@rollup/plugin-commonjs": "^28.0.3",
+		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.13.2",
-		"axios": "^1.7.9",
+		"@types/node": "^22.13.10",
+		"axios": "^1.8.4",
+		"biome": "link:@biomejs/cli-darwin-x64/biome",
 		"openapi3-ts": "^4.4.0",
-		"rollup": "^4.34.6",
+		"rollup": "^4.36.0",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.3"
+		"typescript": "^5.8.2",
+		"vite": "^6.2.2"
 	},
 	"dependencies": {
 		"@clack/prompts": "^0.10.0",
-		"@orval/core": "^7.5.0",
+		"@orval/core": "^7.7.0",
 		"execa": "^9.5.2",
-		"orval-effect": "7.5.0",
+		"orval-effect": "7.7.0",
 		"p-limit": "^6.2.0",
-		"picocolors": "^1.1.1",
-		"vite": "^6.1.0"
+		"picocolors": "^1.1.1"
 	},
 	"resolutions": {
 		"whatwg-url": ">=14"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": ["@biomejs/biome"]
 	}
 }
