--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
 		"@rollup/plugin-commonjs": "^28.0.3",
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.13.10",
+		"@types/node": "^22.14.0",
 		"axios": "^1.8.4",
 		"openapi3-ts": "^4.4.0",
-		"rollup": "^4.36.0",
+		"rollup": "^4.39.0",
 		"tslib": "^2.8.1",
-		"typescript": "^5.8.2",
-		"vite": "^6.2.2"
+		"typescript": "^5.8.3",
+		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@clack/prompts": "^0.10.0",
-		"@orval/core": "^7.7.0",
+		"@clack/prompts": "^0.10.1",
+		"@orval/core": "^7.8.0",
 		"execa": "^9.5.2",
-		"orval-effect": "7.7.0",
+		"orval-effect": "7.8.0-patch1",
 		"p-limit": "^6.2.0",
 		"picocolors": "^1.1.1"
 	},
@@ -38,6 +38,6 @@
 		"whatwg-url": ">=14"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome"]
+		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
 	}
 }
