--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "d2m-apigen",
 	"private": false,
-	"version": "2.0.2",
+	"version": "2.0.3",
 	"type": "module",
 	"bin": {
 		"d2m-apigen": "dist/index.js"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"dev": "vite",
 		"build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
@@ -18,19 +20,19 @@
 		"@rollup/plugin-commonjs": "^28.0.3",
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.14.0",
-		"axios": "^1.8.4",
+		"@types/node": "^22.15.2",
+		"axios": "^1.9.0",
 		"openapi3-ts": "^4.4.0",
-		"rollup": "^4.39.0",
+		"rollup": "^4.40.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
-		"vite": "^6.2.6"
+		"vite": "^6.3.3"
 	},
 	"dependencies": {
 		"@clack/prompts": "^0.10.1",
-		"@orval/core": "^7.8.0",
+		"@orval/core": "^7.9.0",
 		"execa": "^9.5.2",
-		"orval-effect": "7.8.0-patch1",
+		"orval-effect": "7.9.0",
 		"p-limit": "^6.2.0",
 		"picocolors": "^1.1.1"
 	},
@@ -38,6 +40,9 @@
 		"whatwg-url": ">=14"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"esbuild"
+		]
 	}
 }
