--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"bin": {
 		"d2m-apigen": "dist/index.js"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"dev": "vite",
 		"build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
@@ -18,13 +20,13 @@
 		"@rollup/plugin-commonjs": "^28.0.3",
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.15.2",
+		"@types/node": "^22.15.12",
 		"axios": "^1.9.0",
 		"openapi3-ts": "^4.4.0",
-		"rollup": "^4.40.0",
+		"rollup": "^4.40.2",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
-		"vite": "^6.3.3"
+		"vite": "^6.3.5"
 	},
 	"dependencies": {
 		"@clack/prompts": "^0.10.1",
@@ -38,6 +40,9 @@
 		"whatwg-url": ">=14"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"esbuild"
+		]
 	}
 }
