--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
 	"bin": {
 		"d2m-apigen": "dist/index.js"
 	},
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"scripts": {
 		"dev": "vite",
-		"build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+		"build": "pnpm format && bumpp && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
 		"format": "biome format --write . --use-editorconfig=true",
 		"prepublishOnly": "pnpm build"
 	},
@@ -22,6 +20,7 @@
 		"@rollup/plugin-typescript": "^12.1.2",
 		"@types/node": "^22.15.12",
 		"axios": "^1.9.0",
+		"bumpp": "^10.1.0",
 		"openapi3-ts": "^4.4.0",
 		"rollup": "^4.40.2",
 		"tslib": "^2.8.1",
@@ -40,9 +39,6 @@
 		"whatwg-url": ">=14"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": [
-			"@biomejs/biome",
-			"esbuild"
-		]
+		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
 	}
 }
