--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
 		"picocolors": "^1.1.1"
 	},
 	"resolutions": {
-		"whatwg-url": ">=14"
+		"whatwg-url": "14.2.0"
+	},
+	"overrides": {
+		"whatwg-url": "14.2.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
