--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
 		"openapi3-ts": "^4.4.0",
 		"rollup": "^4.40.2",
 		"tslib": "^2.8.1",
-		"typescript": "^5.8.3",
-		"vite": "^6.3.5"
+		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@clack/prompts": "^0.10.1",
