--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"bin": {
 		"d2m-apigen": "dist/index.js"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"build": "rollup -c --configPlugin typescript --configImportAttributesKey with",
 		"format": "biome format --write . --use-editorconfig=true",
@@ -18,7 +20,7 @@
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-replace": "^6.0.2",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.15.12",
+		"@types/node": "^22.15.16",
 		"axios": "^1.9.0",
 		"bumpp": "^10.1.0",
 		"openapi3-ts": "^4.4.0",
@@ -41,6 +43,9 @@
 		"whatwg-url": "14.2.0"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"esbuild"
+		]
 	}
 }
