--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
-	"exclude": ["node_modules", "dist", "__tests__", "**/*.test*", "**/*.spec*", "src/api/*"],
 	"$schema": "https://json.schemastore.org/tsconfig",
+	"exclude": ["node_modules", "dist", "src/api/*"],
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "esnext",
