--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"bin": {
 		"d2m-apigen": "dist/index.js"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"build": "rollup -c --configPlugin typescript --configImportAttributesKey with",
 		"format": "biome format --write . --use-editorconfig=true",
@@ -14,23 +16,23 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@rollup/plugin-commonjs": "^28.0.3",
+		"@rollup/plugin-commonjs": "^28.0.5",
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-replace": "^6.0.2",
 		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/node": "^22.15.30",
-		"axios": "^1.9.0",
+		"@types/node": "^24.0.1",
+		"axios": "^1.10.0",
 		"bumpp": "^10.1.1",
 		"openapi3-ts": "^4.4.0",
-		"rollup": "^4.42.0",
+		"rollup": "^4.43.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@clack/prompts": "^0.11.0",
-		"@orval/core": "^7.9.0",
+		"@orval/core": "^7.10.0",
 		"execa": "^9.6.0",
-		"orval-effect": "7.9.0",
+		"orval-effect": "7.10.0",
 		"p-limit": "^6.2.0",
 		"picocolors": "^1.1.1"
 	},
@@ -41,6 +43,9 @@
 		"whatwg-url": "14.2.0"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"esbuild"
+		]
 	}
 }
