--- a/biome.json
+++ b/biome.json
@@ -1,26 +1,18 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
 	"vcs": {
-		"enabled": false,
-		"clientKind": "git",
-		"useIgnoreFile": false
+		"enabled": false
 	},
 	"files": {
-		"ignoreUnknown": false,
-		"ignore": ["dist", "node_modules", "public", "openapi.schema.json"]
+		"ignoreUnknown": true,
+		"includes": ["**", "!src/api", "!dist", "!node_modules"]
 	},
 	"formatter": {
 		"enabled": true,
 		"indentStyle": "tab"
 	},
-	"organizeImports": {
-		"enabled": true
-	},
 	"linter": {
-		"enabled": false,
-		"rules": {
-			"recommended": true
-		}
+		"enabled": false
 	},
 	"javascript": {
 		"formatter": {
