--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
 	"bin": {
 		"d2m-apigen": "dist/index.js"
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"build": "rollup -c --configPlugin typescript --configImportAttributesKey with",
-		"format": "biome format --write . --use-editorconfig=true",
+		"format": "biome check --write . --use-editorconfig=true",
 		"prepublishOnly": "pnpm format && bumpp && pnpm build"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
+		"@biomejs/biome": "^2.1.2",
 		"@rollup/plugin-commonjs": "^28.0.6",
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-replace": "^6.0.2",
 		"@rollup/plugin-typescript": "^12.1.4",
-		"@types/node": "^24.0.10",
-		"axios": "^1.10.0",
+		"@types/node": "^24.1.0",
+		"axios": "^1.11.0",
 		"bumpp": "^10.2.0",
 		"openapi3-ts": "^4.5.0",
-		"rollup": "^4.44.2",
+		"rollup": "^4.46.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3"
 	},
@@ -41,6 +43,9 @@
 		"whatwg-url": "14.2.0"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"esbuild"
+		]
 	}
 }
