--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,14 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"useDefineForClassFields": true,
-		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"lib": ["ESNext"],
 		"module": "nodenext",
 		"skipLibCheck": true,
 		"moduleResolution": "nodenext",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+		"moduleDetection": "force",
 		"noEmit": true,
 		"strict": true,
 		"noUnusedLocals": true,
