--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,11 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
 	"vcs": {
 		"enabled": false
 	},
 	"files": {
 		"ignoreUnknown": true,
-		"includes": ["**", "!src/api", "!dist", "!node_modules"]
+		"includes": ["**", "!dist", "!node_modules"]
 	},
 	"formatter": {
 		"enabled": true,
