--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
 		"prepublishOnly": "pnpm format && bumpp && pnpm build"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.2",
+		"@biomejs/biome": "^2.2.4",
 		"@rollup/plugin-commonjs": "^28.0.6",
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-replace": "^6.0.2",
 		"@rollup/plugin-typescript": "^12.1.4",
-		"@types/node": "^24.3.0",
-		"axios": "^1.11.0",
+		"@types/node": "^24.5.2",
+		"axios": "^1.12.2",
 		"bumpp": "^10.2.3",
 		"openapi3-ts": "^4.5.0",
-		"rollup": "^4.50.0",
+		"rollup": "^4.52.2",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.2"
 	},
@@ -32,9 +32,10 @@
 		"@clack/prompts": "^0.11.0",
 		"@orval/core": "^7.11.2",
 		"execa": "^9.6.0",
-		"orval-effect": "7.11.2",
+		"orval-effect": "7.11.6",
 		"p-limit": "^7.1.1",
-		"picocolors": "^1.1.1"
+		"picocolors": "^1.1.1",
+		"rimraf": "^6.0.1"
 	},
 	"resolutions": {
 		"whatwg-url": "14.2.0"
