--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
 	"dependencies": {
 		"@clack/prompts": "^0.11.0",
 		"@orval/core": "^7.11.2",
+		"del": "^8.0.1",
 		"execa": "^9.6.0",
 		"orval-effect": "7.11.6",
 		"p-limit": "^7.1.1",
-		"picocolors": "^1.1.1",
-		"rimraf": "^6.0.1"
+		"picocolors": "^1.1.1"
 	},
 	"resolutions": {
 		"whatwg-url": "14.2.0"
